# weav-ai-core

./: README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
doc/: docusaurus.config.js
doc/src/pages/: index.md
docs/: api-reference.md  architecture.md
tests/: test_public_api.py
weav_ai_core/: __init__.py
weav_ai_core/agent/: __init__.py
weav_ai_core/agent_loop/: __init__.py
weav_ai_core/llm/: __init__.py  base.py  router.py
weav_ai_core/rag/: __init__.py
weav_ai_core/tools/: __init__.py
