[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "weav-ai-core"
version = "0.1.0"
description = "Reusable WeavInt AI core abstractions for LLM, agents, agent loops, RAG, and tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "WeavInt Authors" }]
dependencies = [
  "weav-core @ git+https://github.com/HungryZhao/WeavInt-Dev.git@main#subdirectory=packages/weav-core",
  "pydantic>=2.7.0",
  "typing-extensions>=4.7.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["weav_ai_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
